--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,12 @@
 
+ @font-face {
+    font-family: Ubuntu, sans-serif;
+    src: url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+    font-weight:700;
+  }
+  
+
+
+  body {
+      font-family: Ubuntu, sans-serif;
+  }
