--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,7 @@
 
   body {
       font-family: Ubuntu, sans-serif;
+      color: cyan;
+      background-color: #222;
+      padding-top: 20px;
   }
