--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,37 @@
       background-color: #222;
       padding-top: 20px;
   }
+
+  .dinamico {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .demo {
+    width: 100px;
+    height: 100px;
+    background-color: grey;
+    border-radius: 100%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .cor-1 {
+    background-color: green;
+    color:deeppink;
+    font-weight: bold;
+  }
+
+  .cor-2 {
+    background-color: yellow;
+    color: midnightblue;
+    font-weight: bold;
+  }
+  
+  .cor-3 {
+    background-color: red;
+    color: blanchedalmond;
+    font-weight: bold;
+  }
